# svgtypes

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  test_all.sh
.github/workflows/: main.yml
benches/: Cargo.toml  benchmark.rs  lib.rs
codegen/: Cargo.toml  README.md  colors.txt  main.rs
codegen/spec/: attributes.txt  elements.txt
codegen/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_color.rs  fuzz_length.rs  fuzz_path.rs  fuzz_style.rs  fuzz_transform.rs
src/: angle.rs  aspect_ratio.rs  attribute_id.rs  color.rs  colors.rs  directional_position.rs  element_id.rs  enable_background.rs  error.rs  filter_functions.rs  font.rs  funciri.rs  length.rs  length_list.rs  lib.rs  line_cap_join.rs  number.rs  number_list.rs  options.rs  paint.rs  paint_order.rs  path.rs  points.rs  relative_position.rs  stream.rs  streamext.rs  traits.rs  transform.rs  transform_origin.rs  viewbox.rs
src/color/: colors.rs  mod.rs  parser.rs  writer.rs
src/path/: builder.rs  mod.rs  parser.rs  segment.rs  writer.rs
src/points/: mod.rs  parser.rs  writer.rs
src/style/: mod.rs  parser.rs
src/transform/: mod.rs  parser.rs  writer.rs
