[package]
name = "svgtypes"
version = "0.6.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
categories = ["parser-implementations"]
description = "SVG types parser and writer."
documentation = "https://docs.rs/svgtypes/"
keywords = ["svg", "parser", "tokenizer"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/RazrFalcon/svgtypes"

[workspace]
members = ["benches"]

[dependencies]
float-cmp = { version = "0.8", default-features = false, features = ["std"] }
siphasher = "0.3"
