[package]
name = "svgtypes"
version = "0.9.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
categories = ["parser-implementations"]
description = "SVG types parser."
documentation = "https://docs.rs/svgtypes/"
keywords = ["svg", "parser", "tokenizer"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/RazrFalcon/svgtypes"

[workspace]
members = ["benches"]

[dependencies]
siphasher = "0.3"
kurbo = "0.8" # ArcTo to CurveTo(s)
